[package]
name = "sha-base64"
version = "0.1.0"
authors = ["sadness_ojisan <sadness.ojisan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
buffer = "0.1.8"
hex = "0.4.2"
rust-crypto = "0.2.36"
